updated flake8 config to ignore type annotations in tests/*

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,8 +52,8 @@ ignore = ANN101,E203,E501,W503
 application-import-names = usql_conf,tests
 # Utilise Google style guide for imports (I).
 import-order-style = google
-# Ignore Bandit (S) assertion warnings in tests/ folder.
-per-file-ignores = tests/*:S101
+# Ignore Bandit (S) assertion and annotations (ANN) warnings in tests/*.
+per-file-ignores = tests/*:S101,ANN
 # Utilise Google style guide for docstrings (D).
 docstring-convention = google
 # Max allowed code complexity (C).
