--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py36,py37,py38,py39,pre-commit
 
 [testenv]
-deps = 
+deps =
     pytest
     pytest-mock
     coverage
@@ -15,22 +15,28 @@ commands =
 [testenv:pre-commit]
 skip_install = true
 deps = pre-commit
-commands = 
+commands =
     pre-commit {posargs:run --all-files}
 
 [testenv:build]
 skip_install = true
-deps = 
-    wheel
-    setuptools
-commands = 
-    python setup.py -q sdist bdist_wheel
+deps =
+    build
+commands =
+    python -m build --sdist --wheel
+
+[testenv:check-dist]
+skip_install = true
+deps =
+    twine
+commands =
+    twine check dist/*
 
 [testenv:release]
 skip_install = true
-deps = 
+deps =
     {[testenv:build]deps}
     twine
-commands = 
+commands =
     {[testenv:build]commands}
     twine upload --skip-existing dist/*
