--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,12 +3,42 @@ repos:
     rev: v4.0.1
     hooks:
     -   id: check-yaml
+    -   id: check-json
+    -   id: check-added-large-files
+    -   id: check-docstring-first
+    -   id: debug-statements
     -   id: end-of-file-fixer
+    -   id: name-tests-test
+    -   id: requirements-txt-fixer
     -   id: trailing-whitespace
+-   repo: https://github.com/asottile/setup-cfg-fmt
+    rev: v1.19.0
+    hooks:
+    -   id: setup-cfg-fmt
+-   repo: https://github.com/asottile/reorder_python_imports
+    rev: v2.6.0
+    hooks:
+    -   id: reorder-python-imports
+        args: [--py3-plus]
+-   repo: https://github.com/asottile/add-trailing-comma
+    rev: v2.2.0
+    hooks:
+    -   id: add-trailing-comma
+        args: [--py36-plus]
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v2.29.0
+    hooks:
+    -   id: pyupgrade
+        args: [--py36-plus]
 -   repo: https://github.com/psf/black
     rev: 21.10b0
     hooks:
     -   id: black
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.910-1
+    hooks:
+    -   id: mypy
+        args: [--ignore-missing-imports]
 -   repo: https://github.com/pycqa/flake8
     rev: 4.0.1
     hooks:
@@ -23,8 +53,3 @@ repos:
             flake8-import-order,
             darglint,
         ]
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.910-1
-    hooks:
-    -   id: mypy
-        args: [--ignore-missing-imports]
