--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: usql_conf.__version__
 description = CLI for Managing SQL Connection Strings used in usql CLI
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pycqa/flake8
+url = https://github.com/jpy-git/usql_conf
 author = Joe Young
 author_email = josephyoung.jpy@gmail.com
 license = MIT
