switch import order style to smarkets

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ usql_conf = py.typed
 select = ANN,B,B9,BLK,C,D,DAR,E,F,I,S,W
 ignore = ANN101,E203,E501,W503
 application-import-names = usql_conf,tests
-import-order-style = cryptography
+import-order-style = smarkets
 per-file-ignores = tests/*:S101,ANN
 docstring-convention = google
 max-complexity = 10
